--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "client-install": "cd client && npm install",
     "start": "cd server && node server.js",
-    "server": "cd server && nodemon server.js"
+    "server": "cd server && nodemon server.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jake Waltrip <jake.waltrip@gmail.com>",
   "license": "ISC",
